SERVER-23125 MessageHandler has shared ownership

(cherry picked from a8412488599ba9def9dea29505ea69323ba6e1fc)